In the header, set an explicit, non-white background color, to make sure the text is visible on old versions of IE that don't support background-size:cover.

--- a/osp/www/assets/stylesheets/core/mixins/header.less
+++ b/osp/www/assets/stylesheets/core/mixins/header.less
@@ -4,6 +4,7 @@
 
   color: whitesmoke;
 
+  background-color: #246399;
   background-image: url('/static/images/lecture-hall.jpg');
   background-position: 0 50%;
   .background-size(cover);
